--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div>O Número Secreto é maior <i class="fa-solid fa-arrow-up-long"></i></div>
     </div>
 
+    <script src="app/reconhecimentoDeVoz.js"></script>
     <script src="./app/sortearNumero.js"></script>
 </body>
 </html>
