--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <h3>O numero secreto está entre <span id="menor__valor">0</span> e <span id="maior__valor">100</span> </h3>
     <div id="chute" class="mensagem">
         <div>Você disse: </div>
-        <span class="box">20</span>
-        <div>O Número Secreto é maior <i class="fa-solid fa-arrow-up-long"></i></div>
+        <span class="box">Diga um número para começar!</span>
+        <!-- <div>O Número Secreto é maior <i class="fa-solid fa-arrow-up-long"></i></div> -->
     </div>
 
     <script src="app/reconhecimentoDeVoz.js"></script>
     <script src="./app/sortearNumero.js"></script>
+    <script src="app/validacao.js"></script>
 </body>
 </html>
+</button>
